Customized to iOS Web App Guideline as per:
 https://developer.apple.com/library/content/documentation/AppleApplications/Reference/SafariWebContent/ConfiguringWebApplications/ConfiguringWebApplications.html

--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="apple-mobile-web-app-title" content="RGB Light">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<title>Pi Wakeup!!</title>
+	<link rel="apple-touch-icon" href="/images/Nexxspace-Icon-120x120.png">
+	<link rel="apple-touch-startup-image" href="/images/Nexxspace-Icon-750x1334.png">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 
