Changed to use boostrap widgets instead.

--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -13,6 +13,7 @@
 
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="/css/bootstrap-slider.min.css" />
 </head>
 <body>
 	<div id="app" />
